--- a/SimpleFront/src/app/components/task-list/task-list.component.html
+++ b/SimpleFront/src/app/components/task-list/task-list.component.html
@@ -4,11 +4,18 @@
         <app-modal-button (closeDialogEvent)="clearForm()"><app-task-form></app-task-form></app-modal-button>
     </div>
     <div *ngIf="tasks$ | async as tasks; else notFound">
-        <table *ngIf="tasks.length > 0; else notFound">
+        <table class="task-list-table" *ngIf="tasks.length > 0; else notFound">
+            <thead>
+                <tr class="task-list-row">
+                    <th>Title</th>
+                    <th>Description</th>
+                    <th>Due date</th>
+                </tr>
+            </thead>
             <tr class="task-list-row" *ngFor="let task of tasks">
                 <td class="task-list-title">{{ task.title }}</td>
-                <td>{{ task.description ?? '-' }}</td>
-                <td>{{ task.dueDate | date : 'yyyy-MM-dd HH:mm:ss' }}</td>
+                <td class="task-list-description">{{ task.description ?? '-' }}</td>
+                <td class="task-list-date">{{ task.dueDate | date : 'yyyy-MM-dd HH:mm:ss' }}</td>
             </tr>
         </table>
     </div>
