--- a/SimpleFront/src/app/components/task-list/task-list.component.scss
+++ b/SimpleFront/src/app/components/task-list/task-list.component.scss
@@ -8,12 +8,34 @@
     background-color: white;
 }
 
-.task-list-row {
-    height: 1rem;
+thead {
+    position: relative;
+    margin: 0.6em 0 1em 0;
 }
 
-.task-list-title {
-    width: 15%;
+thead::after {
+    display: block;
+    position: absolute;
+    top: calc(100% + 0.2em);
+    content: '';
+    border-bottom: 3px black solid;
+    width: 100%;
+}
+
+tr + tr {
+    margin-top: 1em;
+}
+
+.task-list-table {
+    font-size: 1.2rem;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.task-list-row {
+    display: grid;
+    grid-template-columns: 20% 50% 30%;
 }
 
 .task-list-header {
