--- a/SimpleFront/src/app/app.component.scss
+++ b/SimpleFront/src/app/app.component.scss
@@ -1,12 +1,9 @@
 .root-container {
-    display: flex;
-    height: 100%;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
-}
-
-.app-task-list-container {
-    width: clamp(40%, 500px, 500px);
-    min-height: 40%;
+    min-height: 300px;
+    min-width: 500px;
+    background-color: white;
+    padding: 3em;
+    margin: 4em 0;
+    border-radius: 20px;
+    border: 1px gray solid;
 }
