--- a/SimpleFront/src/app/components/task-list/task-list.component.scss
+++ b/SimpleFront/src/app/components/task-list/task-list.component.scss
@@ -1,3 +1,9 @@
+.task-list-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
 thead {
     position: relative;
     margin: 0.6em 0 1em 0;
@@ -38,5 +44,5 @@ tr + tr {
     height: 100%;
     justify-content: center;
     align-items: center;
-    font-size: 1.2em;
+    font-size: 1.2rem;
 }
