--- a/SimpleFront/src/app/components/modal-button/modal-button.component.scss
+++ b/SimpleFront/src/app/components/modal-button/modal-button.component.scss
@@ -7,18 +7,24 @@ p {
 }
 
 .modal-button-dialog {
-    opacity: 0;
-    filter: blur(10px);
     width: clamp(40%, 500px, 500px);
-    transition: 0.5s;
     border: 1px black solid;
     border-radius: 25px;
     padding: 2em 4em;
 }
 
 .modal-button-dialog[open] {
-    opacity: 1;
-    filter: unset;
+    animation: fade 0.2s ease-in-out;
+}
+
+@keyframes fade {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
 
 .modal-button-container {
